--- a/DP.TwinRinksHelper.Web/Pages/_ViewImports.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 @using DP.TwinRinksHelper.Web
+@using DP.TwinRinks.YH.ScheduleParser
+
 @namespace DP.TwinRinksHelper.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
