mobile page fix

--- a/DP.TwinRinksHelper.Web/Pages/CompareSchedule.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/CompareSchedule.cshtml
@@ -1,11 +1,9 @@
 ﻿@page
 @model DP.TwinRinksHelper.Web.Pages.CompareScheduleModel
 @{
-    ViewData["Title"] = "CompareSchedule";
+    ViewData["Title"] = "Schedule Sync";
 }
-
-
-<div class="panel panel-default" style="margin:10px">
+<div class="panel panel-default" style="margin-top:10px">
     <div class="panel-heading">Schedule Comparer</div>
     <div class="panel-body">
         <form method="post">
