--- a/DP.TwinRinksHelper.Web/Pages/Mobile.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/Mobile.cshtml
@@ -1,96 +1,130 @@
 ﻿@page
 @model MobileSchedule
 @{
-
+    Layout = null;
     ViewBag.Title = (Model.SelectedTeam ?? "Youth Hockey") + " Schedule";
 }
-<div id="main" style="display:none">
-    <form asp-action="MobileSchedule" method="get">
-        <div data-role="header" data-position="fixed" data-theme="a">
-            <div>
-                @Html.DropDownListFor(m => m.SelectedTeam, Model.Teams, new { onchange = "this.form.submit();", data_mini = "true", data_inline = "true" })
-            </div>
-        </div><!-- /header -->
-        @if (Model.Events != null)
-        {
-        <div id="mainPage" data-role="page" data-title="@((Model.SelectedTeam ?? " Youth Hockey") + " Schedule" )">
-            <div class="ui-content" role="main">
-                <ul data-role="listview" data-theme="a" data-dividertheme="a" data-filter="true" data-filter-theme="a" data-filter-placeholder="Search events...">
-                    @foreach (var d in Model.Events.GroupBy(x => x.EventDate).Select(x => new { Date = x.Key, Events = x.ToList() }))
-                        {
-                    <li data-role="list-divider">@d.Date.ToString("ddd").ToUpper(), @d.Date.ToString("MMM d")</li>
-
-                    @foreach (var e in d.Events)
+<html>
+<head>
+    <environment include="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
+              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+    </environment>
+</head>
+<body>
+    <div id="main" style="display:none">
+        <form asp-action="MobileSchedule" method="get">
+            <div data-role="header" data-position="fixed" data-theme="a">
+                <div>
+                    @Html.DropDownListFor(m => m.SelectedTeam, Model.Teams, new { onchange = "this.form.submit();", data_mini = "true", data_inline = "true" })
+                </div>
+            </div><!-- /header -->
+            @if (Model.Events != null)
+            {
+                <div id="mainPage" data-role="page" data-title="@((Model.SelectedTeam ?? " Youth Hockey") + " Schedule" )">
+                    <div class="ui-content" role="main">
+                        <ul data-role="listview" data-theme="a" data-dividertheme="a" data-filter="true" data-filter-theme="a" data-filter-placeholder="Search events...">
+                            @foreach (var d in Model.Events.GroupBy(x => x.EventDate).Select(x => new { Date = x.Key, Events = x.ToList() }))
                             {
-                    @if (e.EventType == TwinRinksEventType.Game)
+                                <li data-role="list-divider">@d.Date.ToString("ddd").ToUpper(), @d.Date.ToString("MMM d")</li>
+
+                                @foreach (var e in d.Events)
                                 {
-                    <li>
-                        @if (e.Rink == TwinRinksRink.Away)
-                                        {
-                        <h3 style="overflow:visible; text-shadow:none"><span class="label label-danger">Away</span><span class="label label-default" style="overflow:auto">Game</span> vs @e.AwayTeamName</h3>
-                        <p><strong>@@ @e.Location</strong></p>
-                                        }
-                                        else
-                                        {
-                        <h3 style="overflow:visible; text-shadow:none"><span class="label label-success">Home</span><span class="label label-default">Game</span> vs @e.AwayTeamName</h3>
-                        <p><strong>@@ @e.Rink.ToString() Rink</strong></p>
-                                        }
-                        <p class="ui-li-aside" style="font-size:large; right:1em"><strong>@DateTime.Today.Add(e.EventStart).ToString("h:mm")</strong>@DateTime.Today.Add(e.EventStart).ToString("tt").ToUpper()</p>
-                    </li>
+                                    @if (e.EventType == TwinRinksEventType.Game)
+                                    {
+                                        <li>
+                                            @if (e.Rink == TwinRinksRink.Away)
+                                            {
+                                                <h3 style="overflow:visible; text-shadow:none"><span class="label label-danger">Away</span><span class="label label-default" style="overflow:auto">Game</span> vs @e.AwayTeamName</h3>
+                                                <p><strong>@@ @e.Location</strong></p>
+                                            }
+                                            else
+                                            {
+                                                <h3 style="overflow:visible; text-shadow:none"><span class="label label-success">Home</span><span class="label label-default">Game</span> vs @e.AwayTeamName</h3>
+                                                <p><strong>@@ @e.Rink.ToString() Rink</strong></p>
+                                            }
+                                            <p class="ui-li-aside" style="font-size:large; right:1em"><strong>@DateTime.Today.Add(e.EventStart).ToString("h:mm")</strong>@DateTime.Today.Add(e.EventStart).ToString("tt").ToUpper()</p>
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li>
+                                            <h3 style="overflow:visible; text-shadow:none"><span class="label label-primary">Practice</span> @(TwinRinksScheduleParserUtils.IsPowerSkatingEvent(e) ? "Power Skating" : "")</h3>
+                                            <p><strong>@@ @e.Rink.ToString() Rink</strong></p>
+                                            @if (e.HomeTeamName == e.AwayTeamName)
+                                            {
+                                                <p>@e.HomeTeamName</p>
+
+                                            }
+                                            else
+                                            {
+                                                <p>@e.HomeTeamName @e.AwayTeamName</p>
+                                            }
+                                            <p class="ui-li-aside" style="font-size:large; right:1em"><strong>@DateTime.Today.Add(e.EventStart).ToString("h:mm")</strong>@DateTime.Today.Add(e.EventStart).ToString("tt").ToUpper()</p>
+
+                                        </li>
+                                    }
                                 }
-                                else
+
+
+                                @if (d.Date.DayOfWeek == DayOfWeek.Sunday)
                                 {
-                    <li>
-                        <h3 style="overflow:visible; text-shadow:none"><span class="label label-primary">Practice</span> @(TwinRinksScheduleParserUtils.IsPowerSkatingEvent(e) ? "Power Skating" : "")</h3>
-                        <p><strong>@@ @e.Rink.ToString() Rink</strong></p>
-                        @if (e.HomeTeamName == e.AwayTeamName)
-                                        {
-                        <p>@e.HomeTeamName</p>
 
-                                        }
-                                        else
-                                        {
-                        <p>@e.HomeTeamName @e.AwayTeamName</p>
-                                        }
-                        <p class="ui-li-aside" style="font-size:large; right:1em"><strong>@DateTime.Today.Add(e.EventStart).ToString("h:mm")</strong>@DateTime.Today.Add(e.EventStart).ToString("tt").ToUpper()</p>
-
-                    </li>
+                                    <li style="height:120px; border-color:white"></li>
                                 }
                             }
+                        </ul>
 
+                    </div><!-- /content -->
+                </div><!-- /page -->
+            }
+        </form>
+    </div>
 
-                    @if (d.Date.DayOfWeek == DayOfWeek.Sunday)
-                            {
-
-                    <li style="height:120px; border-color:white"></li>
-                            }
-                        }
-                </ul>
-
-            </div><!-- /content -->
-        </div><!-- /page -->
-        }
-    </form>
-</div>
-@section Scripts
-    {
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-    <link rel="stylesheet" href="~/lib/add-to-homescreen/style/addtohomescreen.css" />
-    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <script src="~/lib/hide-address-bar/hide-address-bar.js"></script>
-    <script src="~/lib/add-to-homescreen/addtohomescreen.min.js"></script>
-
-    <script>
-        $(function () {
-            $("[data-role='navbar']").navbar();
-            $("[data-role='header'], [data-role='footer']").toolbar();
-            $("#main").show();
-
-            addToHomescreen({
-                skipFirstVisit: true,
-                maxDisplayCount: 1
-            });
-        });
+<environment include="Development">
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+</environment>
+<environment exclude="Development">
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+            asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+            asp-fallback-test="window.jQuery"
+            crossorigin="anonymous"
+            integrity="sha384-K+ctZQ+LL8q6tP7I94W+qzQsfRV2a+AfHIi9k8z8l9ggpc8X+Ytst4yBo/hH+8Fk">
     </script>
-}
+    <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
+            asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+            crossorigin="anonymous"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
+    </script>
+    <script src="~/js/site.min.js" asp-append-version="true"></script>
+</environment>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<link rel="stylesheet" href="~/lib/add-to-homescreen/style/addtohomescreen.css" />
+<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script src="~/lib/hide-address-bar/hide-address-bar.js"></script>
+<script src="~/lib/add-to-homescreen/addtohomescreen.min.js"></script>
+
+<script>
+    $(function () {
+        $("[data-role='navbar']").navbar();
+        $("[data-role='header'], [data-role='footer']").toolbar();
+        $("#main").show();
+
+        addToHomescreen({
+            skipFirstVisit: true,
+            maxDisplayCount: 1
+        });
+    });
+</script>
+    </body>
+</html>
