--- a/DP.TwinRinksHelper.Web/Pages/Conflicts.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/Conflicts.cshtml
@@ -18,7 +18,7 @@
       
     </style>
 }
-<div align="center"><h3>Game Conflicts Finder</h3></div>
+<h3>Game Conflicts Finder</h3>
 <form asp-action="Index" method="get">
     <div class="form-actions no-color">
         <div class="container">
