--- a/DP.TwinRinksHelper.Web/Pages/Index.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/Index.cshtml
@@ -39,7 +39,7 @@
     </script>
 
 }
-<div align="center"><h3>@(Model.SelectedTeam ?? "Youth Hockey") Schedule</h3></div>
+<h3>@(Model.SelectedTeam ?? "Youth Hockey") Schedule</h3>
 <form asp-action="Index" method="get">
     <div class="form-actions no-color">
         <div class="container">
