--- a/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
@@ -24,7 +24,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -51,6 +51,11 @@
                                     <li class="dropdown-header">Tools</li>
                                     <li>
                                         <a href="~/CompareSchedule" title="Compare schedule in a given TeamSnap team to TwinRinks official schedule">Reconcile Schedule</a>
+                                    </li>
+                                    <li class="dropdown-header">Schedule Checker</li>
+                                    <li>
+                                        <a href="~/ScheduleSyncSpec" title="">Scheduled Schedule Checks</a>
+                                        <a href="~/ScheduleSyncSpec/Create" title="">Create Scheduled Schedule Check</a>
                                     </li>
                                 </ul>
                             </div>
