--- a/DP.TwinRinksHelper.Web/Pages/CompareSchedule.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/CompareSchedule.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model DP.TwinRinksHelper.Web.Pages.CompareScheduleModel
 @{
-    ViewData["Title"] = "Schedule Sync";
+    ViewData["Title"] = "Schedule Compare";
 }
 <div class="panel panel-default" style="margin-top:10px">
-    <div class="panel-heading">Schedule Check</div>
+    <div class="panel-heading">Schedule Compare &Aacute; Sync</div>
     <div class="panel-body">
         <form method="post">
             <fieldset>
