--- a/DP.TwinRinksHelper.Web/Pages/ScheduleSyncSpec/Index.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/ScheduleSyncSpec/Index.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h3>Scheduled Schedule Checks</h3>
+<h3>Scheduled Compares</h3>
 <table class="table">
     <thead>
         <tr>
