--- a/DP.TwinRinksHelper.Web/Pages/ScheduleSyncSpec/Create.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/ScheduleSyncSpec/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model DP.TwinRinksHelper.Web.Pages.ScheduleSyncSpec.CreateModel
 @{
-    ViewData["Title"] = "Create Schedule Check";
+    ViewData["Title"] = "Create Scheduled Compare";
 }
 <div class="panel panel-default" style="margin-top:10px">
-    <div class="panel-heading">Schedule Check</div>
+    <div class="panel-heading">Create Scheduled Compare</div>
     <div class="panel-body">
         <form method="post">
             <fieldset>
@@ -17,7 +17,7 @@
                     @Html.DropDownListFor(m => m.SelectedTwinRinksTeam, Model.GetTwinRinksTeamsItems())
                 </div>
                 <div class="form-group">
-                    <label asp-for="SelectedExpiresDate" class="control-label"></label>
+                    <label>Expires:</label>
                     <input asp-for="SelectedExpiresDate" class="form-control" />
                 </div>
                 <button type="submit" class="btn btn-primary">Create</button>
