--- a/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
@@ -50,11 +50,11 @@
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li class="dropdown-header">Tools</li>
                                     <li>
-                                        <a href="~/CompareSchedule" title="Compare schedule in a given TeamSnap team to TwinRinks official schedule">Run Schedule Check</a>
+                                        <a href="~/CompareSchedule" title="Compare schedule in a given TeamSnap team to TwinRinks official schedule">Run Schedule Compare</a>
                                     </li>
                                     <li>
-                                        <a href="~/ScheduleSyncSpec" title="">Schedule Checks</a>
-                                        <a href="~/ScheduleSyncSpec/Create" title="">Create Schedule Check</a>
+                                        <a href="~/ScheduleSyncSpec" title="">Scheduled Compares</a>
+                                        <a href="~/ScheduleSyncSpec/Create" title="">Create Scheduled Compare</a>
                                     </li>
                                 </ul>
                             </div>
