Print team stickers

--- a/DP.TwinRinksHelper.Web/Pages/CompareSchedule.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/CompareSchedule.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Schedule Compare";
 }
 <div class="panel panel-default" style="margin-top:10px">
-    <div class="panel-heading">Schedule Compare &Aacute; Sync</div>
+    <div class="panel-heading">Schedule Compare Sync</div>
     <div class="panel-body">
         <form method="post">
             <fieldset>
