--- a/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
@@ -48,14 +48,19 @@
                                     <img src="~/images/teamsnap-badge.svg" width="20" height="20" style="  display: inline-block;" /> TeamSnap Integration
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <li class="dropdown-header">Tools</li>
+                                    <li class="dropdown-header">Schedule Comparison</li>
                                     <li>
-                                        <a href="~/CompareSchedule" title="Compare schedule in a given TeamSnap team to TwinRinks official schedule">Run Schedule Compare</a>
+                                        <a href="~/CompareSchedule" title="Compare schedule in a given TeamSnap team to TwinRinks official schedule">Compare Schedule</a>
                                     </li>
                                     <li>
-                                        <a href="~/ScheduleSyncSpec" title="">Scheduled Compares</a>
-                                        <a href="~/ScheduleSyncSpec/Create" title="">Create Scheduled Compare</a>
+                                        <a href="~/ScheduleSyncSpec/Create" title="">Create Automatic Comparison</a>
+                                        <a href="~/ScheduleSyncSpec" title="">Edit Automatic Comparisons</a>
                                     </li>
+                                    <li class="dropdown-header">Team Stickers</li>
+                                    <li>
+                                        <a href="~/PrintTeamStickers" title="">Print Team Stickers</a>
+                                    </li>
+                                   
                                 </ul>
                             </div>
                         </li>
