--- a/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
@@ -48,17 +48,17 @@
                                     <img src="~/images/teamsnap-badge.svg" width="20" height="20" style="  display: inline-block;" /> TeamSnap Integration
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <li class="dropdown-header">Schedule Comparison</li>
+                                    <li class="dropdown-header" style="background-color: lightgray;font-weight: bolder;">Event Schedule Compare Tools</li>
                                     <li>
-                                        <a href="~/CompareSchedule" title="Compare schedule in a given TeamSnap team to TwinRinks official schedule">Compare Schedule</a>
+                                        <a href="~/CompareSchedule" title="Compare schedule in a given TeamSnap team to TwinRinks official schedule with the option to push events to TeamSnap">Compare/Sync Schedule</a>
                                     </li>
                                     <li>
-                                        <a href="~/ScheduleSyncSpec/Create" title="">Create Automatic Comparison</a>
+                                        <a href="~/ScheduleSyncSpec/Create" title="Allows to signup to recieve daily emails when TwinRinks schedule does match TeamSnap schedule">Create Automatic Comparison</a>
                                         <a href="~/ScheduleSyncSpec" title="">Edit Automatic Comparisons</a>
                                     </li>
-                                    <li class="dropdown-header">Team Stickers</li>
+                                    <li class="dropdown-header" style="background-color: lightgray;font-weight: bolder;">Team Stickers</li>
                                     <li>
-                                        <a href="~/PrintTeamStickers" title="">Print Team Stickers</a>
+                                        <a href="~/PrintTeamStickers" title="Creates PDF to print team stickers using Avery 8163 labels">Print Team Stickers</a>
                                     </li>
                                    
                                 </ul>
