--- a/DP.TwinRinksHelper.Web/Pages/_LoginPartial.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/_LoginPartial.cshtml
@@ -15,6 +15,6 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Signin">Sign in</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Signin"><img src="~/images/teamsnap-badge.svg" width="20" height="20" style="display: inline-block; margin-right:5px" />Sign in</a></li>
     </ul>
 }
