--- a/DP.TwinRinksHelper.Web/Pages/PrintTeamStickers.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/PrintTeamStickers.cshtml
@@ -31,7 +31,11 @@
                             </div>
                         }
                 </div>
-                <label>4. Click &nbsp;</label><button type="submit" asp-page-handler="Download" class="btn btn-primary">Print</button>
+                <div class="form-group">
+                    <label>4. Additional Player (one per line):</label>
+                    @Html.EditorFor(m => m.AdditionalPlayers, additionalViewData: new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+                    <label>5. Click &nbsp;</label><button type="submit" asp-page-handler="Download" class="btn btn-primary">Print</button>
             </fieldset>
         </form>
     </div>
