--- a/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
@@ -75,10 +75,10 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li>
-                                        <a href="~/CompareSchedule" title="">For Parents</a>
+                                        <a href="~/ParentsHelp" title="">For Parents</a>
                                     </li>
                                     <li>
-                                        <a href="~/ScheduleSyncSpec/Create">For Coaches/Team Managers</a>
+                                        <a href="~/CoachHelp">For Coaches/Team Managers</a>
                                     </li>
                                 </ul>
                             </div>
