--- a/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/_Layout.cshtml
@@ -75,7 +75,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li>
-                                        <a href="~/ParentsHelp" title="">For Parents</a>
+                                        <a href="~/ParentHelp" title="">For Parents</a>
                                     </li>
                                     <li>
                                         <a href="~/CoachHelp">For Coaches/Team Managers</a>
