upgraded to .net 6 and removed unused code

--- a/DP.TwinRinksHelper.Web/Pages/Index.cshtml
+++ b/DP.TwinRinksHelper.Web/Pages/Index.cshtml
@@ -50,12 +50,14 @@
             {
                 <div style="width:200px; margin-top:10px; margin-bottom:10px; float:left" class="no-print"><input type="search" class="light-table-filter form-control" data-table="event-table" placeholder="Filter"></div>
 
-                <!-- <a class="no-print" href="javascript:NavigateToTeamSnapExport();"><i class="fas fa-table"></i> TeamSnap File </a>
-               <a class="no-print" href="javascript:NavigateToICalExport();" style="padding-left:10px"><i class="fas fa-calendar-alt"></i> ICal File</a>-->
+                <!-- <a class="no-print" href="javascript:NavigateToTeamSnapExport();"><i class="fas fa-table"></i> TeamSnap File </a>-->
+              
                 <div style="float:right;padding-top:20px">
                     <a class="no-print" target="_blank" href="@googleUrl"><img  src="~/images/addGoogleCalendar.png" /></a>
                 </div>
-             
+                <div style="float:right;padding-top:20px; margin-right:10px">
+                    <a class="no-print" href="javascript:NavigateToICalExport();" style="padding-left:10px"><i class="fas fa-calendar-alt"></i> ICal File</a>
+                </div>
                 <table class="table table-hover event-table">
                     <thead>
                         <tr>
